--- a/templates/post.html
+++ b/templates/post.html
@@ -55,10 +55,10 @@
                                     </div>
                                 </div>
                                 <div class="column">
-                                    <div class="commentText">
-                                        {{comment.text|safe}}<br>
+                                    <span class="commentText">
+                                        {{comment.text|safe}}<br></span>
                                         <span class="date sub-text">{{comment.comment_author.name}}</span>
-                                    </div>
+
                                 </div>
                             </div>
                         </li>
